[package]
name = "tokio-socketcan-bcm"
version = "0.1.1"
authors = ["marcelbuesing <buesing.marcel@googlemail.com>"]
license = "MIT"
description = "Asynchronous Linux SocketCAN - Broadcast Manager support (BCM) with tokio"
homepage = "https://github.com/marcelbuesing/tokio-socketcan-bcm"
repository = "https://github.com/marcelbuesing/tokio-socketcan-bcm.git"
keywords = ["can", "socketcan", "bcm"]
edition = "2018"

[dependencies]
bitflags = "1.0"
futures = "0.1"
libc = "0.2"
mio = "0.6"
nix = "0.13"
socketcan = "1.7"
tokio = {version = "0.1" }

# [dependencies-dev]
# tokio = {version = "0.1.16", features = ["async-await-preview"]}

[features]
# TryFrom<u32> for CANMessageId
# https://github.com/rust-lang/rust/issues/33417
try_from = []