[package]
name = "tokio-socketcan-bcm"
version = "1.0.0"
authors = ["marcelbuesing <buesing.marcel@googlemail.com>"]
license = "MIT"
description = "Asynchronous Linux SocketCAN - Broadcast Manager support (BCM) with tokio"
homepage = "https://github.com/marcelbuesing/tokio-socketcan-bcm"
repository = "https://github.com/marcelbuesing/tokio-socketcan-bcm.git"
keywords = ["can", "socketcan", "bcm"]
edition = "2018"

[dependencies]
bitflags = "1.2"
futures = "0.3"
futures-util = "0.3"
libc = "0.2"
mio = "0.6"
nix = "0.18"
socketcan = "1.7"
tokio = { version = "0.2", features = ["net", "macros"] }
