[package]
name = "tokio-socketcan-bcm"
version = "2.0.0"
authors = ["marcelbuesing <buesing.marcel@googlemail.com>"]
license = "MIT"
description = "Asynchronous Linux SocketCAN - Broadcast Manager support (BCM) with tokio"
homepage = "https://github.com/marcelbuesing/tokio-socketcan-bcm"
repository = "https://github.com/marcelbuesing/tokio-socketcan-bcm.git"
keywords = ["can", "socketcan", "bcm"]
edition = "2018"

[dependencies]
bitflags = "1.2"
futures = "0.3"
futures-util = "0.3"
libc = "0.2"
mio = "0.7"
nix = "0.18"
socketcan = "1.7"
tokio = { version = "1", features = ["net"] }

[dev-dependencies.tokio]
version = "*"
# required for tokio::test
features = ["macros", "rt-multi-thread"]
